--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require": {
     "php": "^5.6 || ^7.0",
     "deimos/query-builder": "~0.0",
-    "deimos/config": "0.2.3.1"
+    "deimos/config": "~0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.5"
