--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     }
   ],
   "require": {
-    "php": "^5.6 || ^7.0",
+    "php": "^7.0",
     "deimos/query-builder": "~0.0",
     "deimos/config": "~0.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.7.5"
+    "phpunit/phpunit": "^6.0"
   },
   "autoload": {
     "psr-4": {
